logo and text align fixed using display: flex

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
 .header {
     background-color: rgb(0, 0, 0);
-    color: rgba(252, 104, 5, 1);
-    font-size: 23px;
-    padding: 60px;
+    display: flex;
+    align-items: center; /* vertically centered */
+    padding: 10px;
 }
 
 .header img {
-align-items: last baseline;
+    max-height: 100%;
+}
+
+.header h1 {
+    color: rgba(252, 104, 5, 1);
+    font-size: larger;
+}
+
+/* body refers to the body of html, and header is header, it is removing margin white,
+and padding */
+body, header {
+    margin: 0; 
+    padding: 0;
 }
